--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
     sdk: flutter
   http: ^0.12.0
   qrcode_reader: ^0.4.4
+  sqflite: any
+  carousel_slider: ^1.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
